--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@fontsource/irish-grover": "^5.0.12",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.9",
+    "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-web": "~0.19.10",
-    "expo-image-picker": "~15.0.5"
+    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.10.1",
+    "expo-font": "~12.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
