--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@fontsource/irish-grover": "^5.0.12",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@unimodules/core": "^7.1.2",
     "expo": "~51.0.9",
-    "expo-app-loading": "^2.1.1",
+    "expo-app-loading": "^1.0.3",
     "expo-font": "~12.0.6",
     "expo-image-picker": "~15.0.5",
     "expo-status-bar": "~1.12.1",
