--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@unimodules/core": "^7.1.2",
+    "axios": "^1.7.2",
     "expo": "~51.0.9",
     "expo-app-loading": "^1.0.3",
     "expo-font": "~12.0.6",
